---
config:
  theme: default
---
classDiagram
  direction LR

  class CoreDatasetCollection {
    +CoreDataset[] resources
    +Compr.Enum compression
    +string conforms_to
    +string conforms_to_class
    +string conforms_to_schema
    +... (19 more)
  }
  class CoreDataset {
    +CoreDistribution[] distributions
    +Purpose[] purposes
    +Task[] tasks
    +AddressingGap[] addressing_gaps
    +Creator[] creators
    +... (74 more)
  }
  class CoreDistribution {
    +integer bytes
    +string hash
    +string md5
    +string sha256
    +string path
    +... (8 more)
  }
  class Purpose {
    +string response
    +Software[] used_software
    +... (2 more)
  }
  class Creator {
    +Person principal_investigator
    +Organization[] affiliations
    +CRediTRoleEnum[] credit_roles
    +... (4 more)
  }
  class Instance {
    +uri data_topic
    +string instance_type
    +uri data_substrate
    +... (9 more)
  }

  CoreDatasetCollection "*" --> CoreDataset : resources
  CoreDataset "*" --> CoreDistribution : distributions
  CoreDataset "*" --> Purpose : purposes
  CoreDataset "*" --> Creator : creators
  CoreDataset "*" --> Instance : instances

  style CoreDatasetCollection fill:#D8EAF7,stroke:#1976D2,stroke-width:3px
  style CoreDataset fill:#D8EAF7,stroke:#1976D2,stroke-width:3px
  style CoreDistribution fill:#D8EAF7,stroke:#1976D2,stroke-width:3px
  style Purpose fill:#F5F5F5,stroke:#787878,stroke-width:2px
  style Creator fill:#F5F5F5,stroke:#787878,stroke-width:2px
  style Instance fill:#F5F5F5,stroke:#787878,stroke-width:2px
